sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: '=' expected but ';' found.
	var i, v;
                ^AlgInsertionSort:7: error: '=' expected but ';' found.
		var j;
                     ^